--- a/index.html
+++ b/index.html
@@ -6,15 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alurabook</title>
     <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+    <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap&quot; rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <span class="cabecalho__menu-hamburguer"> </span>
-        <img src="img/Polygon 1 (Stroke).svg" alt="Logo do Alurabooks">
-        <a href="#"><img src="img/Favoritos.svg"></a>
-        <a href="#"><img src="img/Compras.svg"></a>
-        <a href="#"><img src="img/Usuario.svg"></a>
+    <header class="cabeçalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
+            <span class="cabecalho__menu-hamburguer container__imagem"></span>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista__menu-titulo">Categoria</li>
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Front-end</a>
+                </li>
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista__menu">
+                    <a href="#" class="lista-menu__link">Design & UX</a>
+                </li>
+            </ul>
+            <img class="container__imagem" src="img/Logo.svg" alt="Logo Alura">
+        </div>
+        <div class="container">
+            <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt=""></a>
+            <a href="#"><img class="container__imagem" src="img/Compras.svg" alt=""></a>
+            <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt=""></a>
+        </div>
     </header>
 </body>
 </html>
