--- a/index.html
+++ b/index.html
@@ -44,5 +44,10 @@
             <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt=""></a>
         </div>
     </header>
+    <section class="banner">
+        <h2 class="banner_título"> Já sabe por onde começar?</h2>
+        <p class="banner_texto"></p> encontre em nossa estante o que você precisa para eu deenvolvimento
+        <input type="search" class="banner_pesquisa" placeholder="Qual será sua proxima leitura">
+    </section>
 </body>
 </html>
