--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </header>
     <section class="banner">
         <h2 class="banner_título"> Já sabe por onde começar?</h2>
-        <p class="banner_texto"></p> encontre em nossa estante o que você precisa para eu deenvolvimento
-        <input type="search" class="banner_pesquisa" placeholder="Qual será sua proxima leitura">
+        <p class="banner_texto"> encontre em nossa estante o que você precisa para eu desenvolvimento</p>
+        <input type="search" class="banner_pesquisa" placeholder="Qual será sua proxima leitura?">
     </section>
 </body>
 </html>
