--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alurabook</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
-    <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap&quot; rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com&quot crossorigin">
+    <link href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">"
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">"
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,6 +40,7 @@
                 </li>
             </ul>
             <img class="container__imagem" src="img/Logo.svg" alt="Logo Alura">
+            <h1 class="container__título"><b class="container__título--negrito">Alura</b> Books</h1>
         </div>
         <div class="container">
             <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt=""></a>
