--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com&quot crossorigin">
     <link href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">"
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">"
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,19 +39,50 @@
                     <a href="#" class="lista-menu__link">Design & UX</a>
                 </li>
             </ul>
-            <img class="container__imagem" src="img/Logo.svg" alt="Logo Alura">
+            <img class="container__imagem container__imagem-transparente" src="img/Logo.svg" alt="Logo Alura">
             <h1 class="container__título"><b class="container__título--negrito">Alura</b> Books</h1>
         </div>
+
         <div class="container">
             <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt=""></a>
             <a href="#"><img class="container__imagem" src="img/Compras.svg" alt=""></a>
             <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt=""></a>
         </div>
+
+        <ul class="opções">
+            <input type="checkbox" id="opções-menu" class="opções__botão">
+            <label for="opções-menu">
+                <li class="opções__item" Categorias></li>
+            </label>
+
+            <ul class="lista-menu">
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Front-end</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Deing & UX</a>
+                </li>
+
+            <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
+            <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+        </ul>
+
     </header>
+
     <section class="banner">
         <h2 class="banner_título"> Já sabe por onde começar?</h2>
         <p class="banner_texto"> encontre em nossa estante o que você precisa para eu desenvolvimento</p>
         <input type="search" class="banner_pesquisa" placeholder="Qual será sua proxima leitura?">
     </section>
+
 </body>
 </html>
