--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <label for="menu">
             <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
+
             <ul class="lista-menu">
                 <li class="lista__menu-titulo">Categoria</li>
                 <li class="lista__menu">
@@ -39,10 +40,10 @@
                     <a href="#" class="lista-menu__link">Design & UX</a>
                 </li>
             </ul>
+
             <img class="container__imagem container__imagem-transparente" src="img/Logo.svg" alt="Logo Alura">
             <h1 class="container__título"><b class="container__título--negrito">Alura</b> Books</h1>
         </div>
-
         <div class="container">
             <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt=""></a>
             <a href="#"><img class="container__imagem" src="img/Compras.svg" alt=""></a>
@@ -52,10 +53,11 @@
         <ul class="opções">
             <input type="checkbox" id="opções-menu" class="opções__botão">
             <label for="opções-menu">
-                <li class="opções__item" Categorias></li>
+                <li class="opções__item">Categorias</li>
             </label>
 
             <ul class="lista-menu">
+                <li class="lista-menu__item lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">Programação</a>
                 </li>
@@ -76,11 +78,22 @@
             <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
         </ul>
 
+        <div class="container">
+            <a href="#"> <img src="img/Favoritos.svg" alt="Meus favoritos"
+            class="container__imagem container__imagem-transparente"></a>
+            <a href="container__link">
+                <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
+                <p class="container__texto">Minha sacola</p></a>
+            <a href="container__link">
+                <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p></a>
+        </div>
+
     </header>
 
     <section class="banner">
         <h2 class="banner_título"> Já sabe por onde começar?</h2>
-        <p class="banner_texto"> encontre em nossa estante o que você precisa para eu desenvolvimento</p>
+        <p class="banner_texto"> encontre em nossa estante o que você precisa para eu desenvolvimento!</p>
         <input type="search" class="banner_pesquisa" placeholder="Qual será sua proxima leitura?">
     </section>
 
